# 3dsfont

./: .gitmodules  CMakeLists.txt  README.md
src/bcfnt/: ResourceFormat.h
src/bcfnt2charset/: CMakeLists.txt  bcfnt2charset.cpp
src/bffnt/: ResourceFormat.h
src/bffnt2bffkn/: CMakeLists.txt  bffnt2bffkn.cpp
src/bffnt2charset/: CMakeLists.txt  bffnt2charset.cpp
src/charset2xggp/: CMakeLists.txt  charset2xggp.cpp
src/charset2xllt/: CMakeLists.txt  charset2xllt.cpp
src/charset2xlor/: CMakeLists.txt  charset2xlor.cpp
src/common/: BinaryBlockHeader.h  BinaryFileFormat.h  BinaryFileHeader.h  CMapInfoScan.h  CMapScanEntry.h  CharWidths.h  FontCodeMap.h  FontInformation.h  FontTextureGlyph.h  RtConsts.h  utility.h
src/ffnt2cfnt/: CMakeLists.txt  ffnt2cfnt.cpp
src/font2charset/: CMakeLists.txt  CMapScanEntry.h  CharWidths.h  FontInformation.h  RtConsts.h  font2charset.cpp  utility.h
src/mergecharset/: CMakeLists.txt  mergecharset.cpp
