AUTO_FILES("." "src" "\\.(cpp|h)$")
AUTO_FILES("../common" "src" "\\.(cpp|h)$")
include_directories(${COMMON_INCLUDE_DIR} "../common")
if(WIN32)
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
  set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
endif()
ADD_EXE(font2charset "${src}")
install(TARGETS font2charset DESTINATION bin)
